# zarr

./: Cargo.toml
.config/: config.toml
benches/: parallel_write.rs  simple.rs
src/: array.rs  chunk.rs  data_type.rs  filter.rs  lib.rs  ndarray.rs  prelude.rs  storage.rs  tests.rs
src/compression/: blosc.rs  gzip.rs  mod.rs
src/store/: filesystem.rs
tests/: integration_test.rs  ndarray.rs
