[package]
name = "zarr"
version = "0.0.1"
edition = "2018"
license = "MIT/Apache-2.0"
authors = [
  "Andrew Champion <andrew.champion@gmail.com>",
  "Chris L. Barnes <chrislloydbarnes@gmail.com>",
]
description = "Rust implementation of the Zarr core protocol for storage and retrieval of N-dimensional typed arrays"
readme = "README.md"
repository = "https://github.com/aschampion/rust-zarr"
keywords = ["tensor"]
categories = ["encoding", "filesystem", "science"]

[features]
default = ["bzip", "gzip", "lz", "use_ndarray", "xz", "blosc"]

blosc = ["blosc-src"]
bzip = ["bzip2"]
gzip = ["flate2/zlib"]
gzip_pure = ["flate2"]
lz = ["lz4"]
lz_pure = ["lz-fear"]
use_ndarray = ["itertools", "ndarray"]
xz = ["xz2"]

[dependencies]
anyhow = "1.0"
byteorder = "1.3.4"
camino = "1.1"
half = { version = "1.6", features = ["serde", "std"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1", features = ["serde"] }
thiserror = "1"

blosc-src = { version = "0.1.1", optional = true }
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0.22", optional = true }
itertools = { version = "^0.10", optional = true }
lz4 = { version = "1.23", optional = true }
lz-fear = { version = "0.1.1", optional = true }
ndarray = { version = "^0.15", optional = true }
xz2 = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
bencher = "0.1.5"
doc-comment = "0.3"
futures = "0.1"
futures-cpupool = "0.1.8"
lazy_static = "1.4"
rand = "0.7"
rayon = "1"
tempdir = "0.3"
tiff = "0.3"


[profile.release]
lto = true

[profile.bench]
lto = true

[[bench]]
harness = false
name = "simple"

[[bench]]
harness = false
name = "parallel_write"
